# cmake_example

./: .gitignore  CMakeLists.txt  OLASConfig.h.in  README.md  adder.cpp  configure.sh  install.sh  main.cpp  run.sh
Adder/: adder.cpp
